--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "IzyWare SQL Console ReKey Feature Package",
   "main": "index.js",
   "scripts": {
+    "query": "node node_modules/izy-proxy/cli.js call query?sql",
     "rekey": "node node_modules/izy-proxy/cli.js call rekey?table"
   },
   "repository": {
