5300033: add command line test interface

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "query": "node node_modules/izy-proxy/cli.js call query?sql",
-    "rekey": "node node_modules/izy-proxy/cli.js call rekey?table"
+    "rekey": "node node_modules/izy-proxy/cli.js call rekey?table",
+    "test": "node node_modules/izy-proxy/cli.js callpretty test/basic?test"
   },
   "repository": {
     "type": "git",
@@ -13,7 +14,7 @@
   },
   "dependencies": {
     "mysql": "2.18.1",
-    "izy-proxy": "5.0.6"
+    "izy-proxy": "latest"
   },
   "keywords": [
     "izyware",
